--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,12 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="85b2ec">  <td>19/07/18 12:34:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;documentTest.SetUp()[pri:0, instance:document.documentTest@574b560f]">&gt;&gt;SetUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@718068661</td>   <td></td> </tr>
-<tr bgcolor="85b2ec">  <td>19/07/18 12:36:41</td>   <td>103412</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;documentTest.after()[pri:0, instance:document.documentTest@574b560f]">&lt;&lt;after</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@718068661</td>   <td></td> </tr>
-<tr bgcolor="85b2ec">  <td>19/07/18 12:35:58</td>   <td>59590</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="documentTest.documentsMulitipleChoice()[pri:2, instance:document.documentTest@574b560f]">documentsMulitipleChoice</td> 
-  <td>main@718068661</td>   <td></td> </tr>
-<tr bgcolor="85b2ec">  <td>19/07/18 12:35:51</td>   <td>53301</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="documentTest.openDoc()[pri:1, instance:document.documentTest@574b560f]">openDoc</td> 
-  <td>main@718068661</td>   <td></td> </tr>
+<tr bgcolor="85b2ec">  <td>19/07/24 13:09:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;documentTest.SetUp()[pri:0, instance:document.documentTest@28975c28]">&gt;&gt;SetUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1714550218</td>   <td></td> </tr>
+<tr bgcolor="85b2ec">  <td>19/07/24 13:09:47</td>   <td>38519</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;documentTest.after()[pri:0, instance:document.documentTest@28975c28]">&lt;&lt;after</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1714550218</td>   <td></td> </tr>
+<tr bgcolor="85b2ec">  <td>19/07/24 13:09:47</td>   <td>38502</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="documentTest.documentsActivivties()[pri:3, instance:document.documentTest@28975c28]">documentsActivivties</td> 
+  <td>main@1714550218</td>   <td></td> </tr>
+<tr bgcolor="85b2ec">  <td>19/07/24 13:09:47</td>   <td>38511</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="documentTest.documentsDetailsOnScreen()[pri:4, instance:document.documentTest@28975c28]">documentsDetailsOnScreen</td> 
+  <td>main@1714550218</td>   <td></td> </tr>
+<tr bgcolor="85b2ec">  <td>19/07/24 13:09:46</td>   <td>38451</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="documentTest.documentsMulitipleChoice()[pri:2, instance:document.documentTest@28975c28]">documentsMulitipleChoice</td> 
+  <td>main@1714550218</td>   <td></td> </tr>
+<tr bgcolor="85b2ec">  <td>19/07/24 13:09:46</td>   <td>38180</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="documentTest.openDoc()[pri:1, instance:document.documentTest@28975c28]">openDoc</td> 
+  <td>main@1714550218</td>   <td></td> </tr>
 </table>
