--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -11,6 +11,14 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>documentsActivivties</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>documentsDetailsOnScreen</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>openDoc</td>
 <td>&nbsp;</td></tr>
 <tr>
