--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,49 +9,11 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Suite</th></tr>
-<tr><td><a href="#t0">document</a></td><td class="num">0</td><td class="num">0</td><td class="num attn">4</td><td class="num">41,111</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">101,159</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">document &#8212; failed</th></tr><tr class="failedeven"><td rowspan="4">document.documentTest</td><td><a href="#m0">documentsActivivties</a></td><td rowspan="1">1563962987018</td><td rowspan="1">5</td></tr><tr class="failedeven"><td><a href="#m1">documentsDetailsOnScreen</a></td><td rowspan="1">1563962987028</td><td rowspan="1">3</td></tr><tr class="failedeven"><td><a href="#m2">documentsMulitipleChoice</a></td><td rowspan="1">1563962986967</td><td rowspan="1">40</td></tr><tr class="failedeven"><td><a href="#m3">openDoc</a></td><td rowspan="1">1563962986696</td><td rowspan="1">211</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">document.documentTest</td><td><a href="#m0">documentsMulitipleChoice</a></td><td rowspan="1">1564400001834</td><td rowspan="1">56159</td></tr><tr class="passedeven"><td><a href="#m1">openDoc</a></td><td rowspan="1">1564399995843</td><td rowspan="1">5987</td></tr></tbody>
 </table>
-<h2>document</h2><h3 id="m0">document.documentTest#documentsActivivties</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException
-	at org.openqa.selenium.support.ui.ExpectedConditions.elementIfVisible(ExpectedConditions.java:315)
-	at org.openqa.selenium.support.ui.ExpectedConditions.access$100(ExpectedConditions.java:44)
-	at org.openqa.selenium.support.ui.ExpectedConditions$10.apply(ExpectedConditions.java:301)
-	at org.openqa.selenium.support.ui.ExpectedConditions$10.apply(ExpectedConditions.java:298)
-	at org.openqa.selenium.support.ui.FluentWait.until(FluentWait.java:248)
-	at pages.documentObjects.waitForVisibility(documentObjects.java:179)
-	at pages.documentObjects.addActivities(documentObjects.java:553)
-	at document.documentTest.documentsActivivties(documentTest.java:60)
-... Removed 25 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">document.documentTest#documentsDetailsOnScreen</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException
-	at org.openqa.selenium.support.ui.ExpectedConditions.elementIfVisible(ExpectedConditions.java:315)
-	at org.openqa.selenium.support.ui.ExpectedConditions.access$100(ExpectedConditions.java:44)
-	at org.openqa.selenium.support.ui.ExpectedConditions$10.apply(ExpectedConditions.java:301)
-	at org.openqa.selenium.support.ui.ExpectedConditions$10.apply(ExpectedConditions.java:298)
-	at org.openqa.selenium.support.ui.FluentWait.until(FluentWait.java:248)
-	at pages.documentObjects.waitForVisibility(documentObjects.java:179)
-	at pages.documentObjects.ChangeDetailsOnTheScreen(documentObjects.java:568)
-	at document.documentTest.documentsDetailsOnScreen(documentTest.java:69)
-... Removed 25 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">document.documentTest#documentsMulitipleChoice</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException
-	at org.openqa.selenium.support.ui.ExpectedConditions.elementIfVisible(ExpectedConditions.java:315)
-	at org.openqa.selenium.support.ui.ExpectedConditions.access$100(ExpectedConditions.java:44)
-	at org.openqa.selenium.support.ui.ExpectedConditions$10.apply(ExpectedConditions.java:301)
-	at org.openqa.selenium.support.ui.ExpectedConditions$10.apply(ExpectedConditions.java:298)
-	at org.openqa.selenium.support.ui.FluentWait.until(FluentWait.java:248)
-	at pages.documentObjects.waitForVisibility(documentObjects.java:179)
-	at pages.documentObjects.deleteEntityMultipleChoice(documentObjects.java:233)
-	at document.documentTest.documentsMulitipleChoice(documentTest.java:38)
-... Removed 25 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">document.documentTest#openDoc</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException
-	at org.openqa.selenium.support.ui.ExpectedConditions.elementIfVisible(ExpectedConditions.java:315)
-	at org.openqa.selenium.support.ui.ExpectedConditions.access$100(ExpectedConditions.java:44)
-	at org.openqa.selenium.support.ui.ExpectedConditions$10.apply(ExpectedConditions.java:301)
-	at org.openqa.selenium.support.ui.ExpectedConditions$10.apply(ExpectedConditions.java:298)
-	at org.openqa.selenium.support.ui.FluentWait.until(FluentWait.java:248)
-	at pages.documentObjects.waitForVisibility(documentObjects.java:179)
-	at pages.documentObjects.pressDocument(documentObjects.java:192)
-	at document.documentTest.openDoc(documentTest.java:26)
-... Removed 25 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">document.documentTest#documentsMulitipleChoice</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">document.documentTest#openDoc</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
