--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,11 +9,12 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">101,159</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">173,736</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">document.documentTest</td><td><a href="#m0">documentsMulitipleChoice</a></td><td rowspan="1">1564400001834</td><td rowspan="1">56159</td></tr><tr class="passedeven"><td><a href="#m1">openDoc</a></td><td rowspan="1">1564399995843</td><td rowspan="1">5987</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">document.documentTest</td><td><a href="#m0">documentsMiddlePane</a></td><td rowspan="1">1564495315606</td><td rowspan="1">45636</td></tr><tr class="passedeven"><td><a href="#m1">documentsMulitipleChoice</a></td><td rowspan="1">1564495255959</td><td rowspan="1">59645</td></tr><tr class="passedeven"><td><a href="#m2">openDoc</a></td><td rowspan="1">1564495246118</td><td rowspan="1">9773</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">document.documentTest#documentsMulitipleChoice</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">document.documentTest#openDoc</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">document.documentTest#documentsMiddlePane</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">document.documentTest#documentsMulitipleChoice</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">document.documentTest#openDoc</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
