--- a/test-output/index.html
+++ b/test-output/index.html
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">4 methods,   4 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -108,6 +108,11 @@
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Suite" title="document.documentTest" class="method navigator-link" hash-for-method="documentsMulitipleChoice">documentsMulitipleChoice</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="document.documentTest" class="method navigator-link" hash-for-method="documentsRightSideOfScreen">documentsRightSideOfScreen</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -145,6 +150,13 @@
                   <a name="documentsMulitipleChoice">
                   </a> <!-- documentsMulitipleChoice -->
                   <span class="method-name">documentsMulitipleChoice</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="documentsRightSideOfScreen">
+                  </a> <!-- documentsRightSideOfScreen -->
+                  <span class="method-name">documentsRightSideOfScreen</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -208,24 +220,28 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(4);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'documentsMiddlePane')
 data.setCell(0, 2, 'document.documentTest')
-data.setCell(0, 3, 68257);
+data.setCell(0, 3, 98087);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'documentsMulitipleChoice')
 data.setCell(1, 2, 'document.documentTest')
-data.setCell(1, 3, 58752);
+data.setCell(1, 3, 63182);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'openDoc')
+data.setCell(2, 1, 'documentsRightSideOfScreen')
 data.setCell(2, 2, 'document.documentTest')
-data.setCell(2, 3, 8841);
+data.setCell(2, 3, 55376);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'openDoc')
+data.setCell(3, 2, 'document.documentTest')
+data.setCell(3, 3, 14904);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 2 minutes</span>
+              <span class="suite-total-time">Total running time: 3 minutes</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -258,19 +274,23 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">openDoc</span>
-                <span class="method-start">20239 ms</span>
+                <span class="method-start">18606 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">documentsMulitipleChoice</span>
-                <span class="method-start">29089 ms</span>
+                <span class="method-start">33526 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">documentsMiddlePane</span>
-                <span class="method-start">87844 ms</span>
+                <span class="method-start">96711 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">documentsRightSideOfScreen</span>
+                <span class="method-start">194801 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">after</span>
-                <span class="method-start">156103 ms</span>
+                <span class="method-start">250179 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
