--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,16 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="85b2ec">  <td>19/08/05 13:37:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;documentTest.SetUp()[pri:0, instance:document.documentTest@28975c28]">&gt;&gt;SetUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1714550218</td>   <td></td> </tr>
-<tr bgcolor="85b2ec">  <td>19/08/05 13:41:01</td>   <td>236612</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;documentTest.after()[pri:0, instance:document.documentTest@28975c28]">&lt;&lt;after</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1714550218</td>   <td></td> </tr>
-<tr bgcolor="85b2ec">  <td>19/08/05 13:38:38</td>   <td>93437</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="documentTest.documentsMiddlePane()[pri:3, instance:document.documentTest@28975c28]">documentsMiddlePane</td> 
-  <td>main@1714550218</td>   <td></td> </tr>
-<tr bgcolor="85b2ec">  <td>19/08/05 13:37:35</td>   <td>30861</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="documentTest.documentsMulitipleChoice()[pri:2, instance:document.documentTest@28975c28]">documentsMulitipleChoice</td> 
-  <td>main@1714550218</td>   <td></td> </tr>
-<tr bgcolor="85b2ec">  <td>19/08/05 13:39:55</td>   <td>170228</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="documentTest.documentsRightSideOfScreen()[pri:4, instance:document.documentTest@28975c28]">documentsRightSideOfScreen</td> 
-  <td>main@1714550218</td>   <td></td> </tr>
-<tr bgcolor="85b2ec">  <td>19/08/05 13:37:20</td>   <td>16033</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="documentTest.openDoc()[pri:1, instance:document.documentTest@28975c28]">openDoc</td> 
-  <td>main@1714550218</td>   <td></td> </tr>
+<tr bgcolor="ac9068">  <td>19/08/05 17:10:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TaskTest.SetUp()[pri:0, instance:task.TaskTest@4470f8a6]">&gt;&gt;SetUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1397381784</td>   <td></td> </tr>
+<tr bgcolor="ac9068">  <td>19/08/05 17:11:08</td>   <td>16965</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TaskTest.TasksMulitipleChoice()[pri:2, instance:task.TaskTest@4470f8a6]">TasksMulitipleChoice</td> 
+  <td>main@1397381784</td>   <td></td> </tr>
+<tr bgcolor="ac9068">  <td>19/08/05 17:11:41</td>   <td>49598</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TaskTest.after()[pri:0, instance:task.TaskTest@4470f8a6]">&lt;&lt;after</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1397381784</td>   <td></td> </tr>
+<tr bgcolor="ac9068">  <td>19/08/05 17:11:03</td>   <td>11258</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TaskTest.openDoc()[pri:1, instance:task.TaskTest@4470f8a6]">openDoc</td> 
+  <td>main@1397381784</td>   <td></td> </tr>
 </table>
