--- a/test-output/index.html
+++ b/test-output/index.html
@@ -24,7 +24,7 @@
     <div class="top-banner-root">
       <span class="top-banner-title-font">Test results</span>
       <br/>
-      <span class="top-banner-font-1">1 suite</span>
+      <span class="top-banner-font-1">1 suite, 1 failed test</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -38,7 +38,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" panel-name="suite-Suite" class="navigator-link">
-              <span class="suite-name border-passed">Suite</span>
+              <span class="suite-name border-failed">Suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Suite" class="navigator-link ">
-                    <span>C:\java\ICU\testng.xml</span>
+                    <span>C:\workspace\ICUAUTO\testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,21 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">4 methods,   4 passed</span>
+                    <span class="method-stats">2 methods, 1 failed,   1 passed</span>
+                  </li>
+                  <li>
+                    <span class="method-list-title failed">Failed methods</span>
+                    <span class="show-or-hide-methods failed">
+                      <a href="#" panel-name="suite-Suite" class="hide-methods failed suite-Suite"> (hide)</a> <!-- hide-methods failed suite-Suite -->
+                      <a href="#" panel-name="suite-Suite" class="show-methods failed suite-Suite"> (show)</a> <!-- show-methods failed suite-Suite -->
+                    </span>
+                    <div class="method-list-content failed suite-Suite">
+                      <span>
+                        <img src="failed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="task.TaskTest" class="method navigator-link" hash-for-method="TasksMulitipleChoice">TasksMulitipleChoice</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                    </div> <!-- method-list-content failed suite-Suite -->
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,22 +116,7 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="document.documentTest" class="method navigator-link" hash-for-method="documentsMiddlePane">documentsMiddlePane</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="document.documentTest" class="method navigator-link" hash-for-method="documentsMulitipleChoice">documentsMulitipleChoice</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="document.documentTest" class="method navigator-link" hash-for-method="documentsRightSideOfScreen">documentsRightSideOfScreen</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="document.documentTest" class="method navigator-link" hash-for-method="openDoc">openDoc</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="task.TaskTest" class="method navigator-link" hash-for-method="openDoc">openDoc</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -132,33 +131,32 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Suite" class="panel Suite">
-          <div class="suite-Suite-class-passed">
+          <div class="suite-Suite-class-failed">
             <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">document.documentTest</span>
+              <img src="failed.png"/>
+              <span class="class-name">task.TaskTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="documentsMiddlePane">
-                  </a> <!-- documentsMiddlePane -->
-                  <span class="method-name">documentsMiddlePane</span>
+                  <a name="TasksMulitipleChoice">
+                  </a> <!-- TasksMulitipleChoice -->
+                  <span class="method-name">TasksMulitipleChoice</span>
+                  <div class="stack-trace">java.lang.NullPointerException
+	at pages.TasksPage.addDateMultipleChoice(TasksPage.java:289)
+	at task.TaskTest.TasksMulitipleChoice(TaskTest.java:45)
+... Removed 25 stack frames
+</div> <!-- stack-trace -->
                 </div> <!-- method-content -->
               </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="documentsMulitipleChoice">
-                  </a> <!-- documentsMulitipleChoice -->
-                  <span class="method-name">documentsMulitipleChoice</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="documentsRightSideOfScreen">
-                  </a> <!-- documentsRightSideOfScreen -->
-                  <span class="method-name">documentsRightSideOfScreen</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Suite-class-failed -->
+          <div class="suite-Suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">task.TaskTest</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
                   <a name="openDoc">
@@ -171,7 +169,7 @@
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\java\ICU\testng.xml</span>
+            <span class="header-content">C:\workspace\ICUAUTO\testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -180,7 +178,7 @@
 &lt;suite name=&quot;Suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;document.documentTest&quot;/&gt;
+      &lt;class name=&quot;task.TaskTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test --&gt;
 &lt;/suite&gt; &lt;!-- Suite --&gt;
@@ -220,28 +218,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(4);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'documentsMiddlePane')
-data.setCell(0, 2, 'document.documentTest')
-data.setCell(0, 3, 76787);
+data.setCell(0, 1, 'TasksMulitipleChoice')
+data.setCell(0, 2, 'task.TaskTest')
+data.setCell(0, 3, 32629);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'documentsRightSideOfScreen')
-data.setCell(1, 2, 'document.documentTest')
-data.setCell(1, 3, 66380);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'documentsMulitipleChoice')
-data.setCell(2, 2, 'document.documentTest')
-data.setCell(2, 3, 62574);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'openDoc')
-data.setCell(3, 2, 'document.documentTest')
-data.setCell(3, 3, 14815);
+data.setCell(1, 1, 'openDoc')
+data.setCell(1, 2, 'task.TaskTest')
+data.setCell(1, 3, 5703);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 3 minutes</span>
+              <span class="suite-total-time">Total running time: 38 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -267,30 +257,24 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">document.documentTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">task.TaskTest</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">SetUp</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">openDoc</span>
-                <span class="method-start">16038 ms</span>
+                <span class="method-start">11263 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">documentsMulitipleChoice</span>
-                <span class="method-start">30866 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">documentsMiddlePane</span>
-                <span class="method-start">93442 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">documentsRightSideOfScreen</span>
-                <span class="method-start">170234 ms</span>
+                <img src="failed.png">
+                </img>
+                <span class="method-name">TasksMulitipleChoice</span>
+                <span class="method-start">16970 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">after</span>
-                <span class="method-start">236616 ms</span>
+                <span class="method-start">49603 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
