--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -15,6 +15,10 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
+<td>tasksRightSideOnScreen</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>openDoc</td>
 <td>&nbsp;</td></tr>
 <tr>
